--- a/public/index.html
+++ b/public/index.html
@@ -20,14 +20,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <!-- 
+  <!--
       to load Advanced-Chartlibrary: has its own data
     <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script> -->
     <!-- To load ChartingLibraray widget: make use of our data -->
   <script src="/charting_library/charting_library.min.js"></script>
   <!-- <script type="text/javascript"></script> -->
-    <title>React App</title>
-    
+    <title>REKTRA SCRTR</title>
+
   </head >
       <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -35,10 +35,10 @@
         <!--
           This HTML file is a template.
           If you open it directly in the browser, you will see an empty page.
-    
+
           You can add webfonts, meta tags, or analytics to this file.
       The build step will place the bundled scripts into the <body> tag.
-  
+
         To begin the development, run `npm start` or `yarn start`.
         To create a production bundle, use `npm run build` or `yarn build`.
       -->
